<resources>
    <string name="app_name">ChatApp</string>
    <string name="text_login1">Welcome back,</string>
    <string name="text_login2">Please login to continue.</string>
    <string name="text_login3">Forgot password!</string>
    <string name="text_login4">Dont have an account?</string>
    <string name="text_sign_up1">Join us today!</string>
    <string name="text_sign_up2">Please provide your basic info.</string>
    <string name="email">Email Address</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="sign_up">Register here</string>
    <string name="validateEmail">Please enter email.</string>
    <string name="validateFormEmail">Please enter the correct email template.</string>
    <string name="validatePassword1">Please enter password.</string>
    <string name="validatePassword2">Must enter more than 6 characters. </string>
    <string name="validateRePassword">Password does not match. </string>
    <string name="validateFormLogin1">Login with email and password correctly.</string>
    <string name="validateFormLogin2">Login is failed.</string>
    <string name="validateFormSignUp">Sign up in successfully.</string>
    <string name="userId">User</string>
    <string name="keyUser1">ID</string>
    <string name="keyUser2">Username</string>
    <string name="keyUser3">ImageUrl</string>
    <string name="alertRegister1">You can not wrong this email and password.</string>
    <string name="alertRegister2">All files must be registered.</string>
    <string name="alertRegister3">Password must be at least 6 characters.</string>
    <string name="Logout">LogOut</string>
    <string name="title1">Chats</string>
    <string name="title2">Users</string>
    <string name="title3">Profile</string>
    <string name="text_user">Username</string>
    <string name="text_bottom">Type a message... </string>
    <string name="alert_sendMessage">You can not send empty message.</string>
    <string name="text_profile">Profile</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
